--- a/StockInquiry.Tests/StockInquiry.Tests.csproj
+++ b/StockInquiry.Tests/StockInquiry.Tests.csproj
@@ -32,7 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="HomePage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StockInquiryContext.cs" />
     <Compile Include="StockInquiryTest.cs" />
   </ItemGroup>
   <ItemGroup>
