--- a/Testing.Examples/Testing.Examples.csproj
+++ b/Testing.Examples/Testing.Examples.csproj
@@ -42,26 +42,39 @@
     <Compile Include="Google\Model\Pages\HomePage.cs" />
     <Compile Include="Google\Model\Fragments\SearchResult.cs" />
     <Compile Include="StockInquiry\BenSherman.cs" />
+    <Compile Include="StockInquiry\SKUResult.cs" />
+    <Compile Include="StockInquiry\StockInquiryResultsPage.cs" />
     <Compile Include="StockInquiry\StockInquiryTests.cs" />
     <Compile Include="StockInquiry\SKUQueryContext.cs" />
     <Compile Include="StockInquiry\StockInquiryPage.cs" />
     <Compile Include="StockInquiry\Style.cs" />
+    <Compile Include="UnitTests\RepositoryTest.cs" />
+    <Compile Include="UnitTests\StyleControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SKUApp\SKUApp.csproj">
+      <Project>{C90B6486-02BC-4C75-BD2E-749AED2C05F9}</Project>
+      <Name>SKUApp</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Testing\Testing.csproj">
       <Project>{DAD0A65F-1E1B-4186-B518-2929FD354C0D}</Project>
       <Name>Testing</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
