--- a/Testing.Data/Testing.Data.csproj
+++ b/Testing.Data/Testing.Data.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DAD0A65F-1E1B-4186-B518-2929FD354C0D}</ProjectGuid>
+    <ProjectGuid>{12DA26D0-F000-44FE-8C9A-CC1A03CF489A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Testing</RootNamespace>
-    <AssemblyName>Testing</AssemblyName>
+    <RootNamespace>Testing.Data</RootNamespace>
+    <AssemblyName>Testing.Data</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
-    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,38 +31,22 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
-    <Compile Include="BDD\BehaviourDrivenTest.cs" />
-    <Compile Include="BDD\ITestContext.cs" />
-    <Compile Include="Browser\BrowserFactory.cs" />
-    <Compile Include="Browser\BrowserTest.cs" />
-    <Compile Include="Browser\BrowserTestContext.cs" />
-    <Compile Include="Browser\PageModel\HtmlFragment.cs" />
-    <Compile Include="Browser\PageModel\HtmlModel.cs" />
-    <Compile Include="Browser\PageModel\HtmlPage.cs" />
-    <Compile Include="Browser\IBrowser.cs" />
-    <Compile Include="Browser\PageModel\IHtmlElement.cs" />
-    <Compile Include="Browser\PageModel\NonExistentElement.cs" />
-    <Compile Include="Browser\Wait.cs" />
-    <Compile Include="Browser\WebDriver\HtmlElement.cs" />
-    <Compile Include="Browser\WebDriver\WebDriverBrowser.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="BDD\ScenarioFailure.cs" />
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="WebDriver">
-      <HintPath>..\packages\Selenium.WebDriver.2.31.2\lib\net40\WebDriver.dll</HintPath>
-    </Reference>
+    <Compile Include="BenShermans.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\Domain\Models.csproj">
+      <Project>{44bcee67-6db9-4cc8-bd0e-ce2e0e17548b}</Project>
+      <Name>Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
