--- a/Testing/packages.config
+++ b/Testing/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="NUnit" version="2.6.2" targetFramework="net45" />
   <package id="Selenium.WebDriver" version="2.31.2" targetFramework="net45" />
+  <package id="SimpleBrowser" version="0.5.11" targetFramework="net45" />
+  <package id="SimpleBrowser.WebDriver" version="0.5.12" targetFramework="net45" />
 </packages>
