--- a/StockInquiry.Models/StockInquiry.Models.csproj
+++ b/StockInquiry.Models/StockInquiry.Models.csproj
@@ -43,6 +43,9 @@
     <Compile Include="Domain\Style.cs" />
     <Compile Include="View\ISKUResult.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
