--- a/StockInquiry/StockInquiry.csproj
+++ b/StockInquiry/StockInquiry.csproj
@@ -74,11 +74,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\StockController.cs" />
     <Compile Include="Controllers\StyleController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\FakeRepository.cs" />
+    <Compile Include="Models\FakeSKURepository.cs" />
+    <Compile Include="Models\FakeStockRepository.cs" />
     <Compile Include="Models\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -126,6 +128,12 @@
       <Project>{12DA26D0-F000-44FE-8C9A-CC1A03CF489A}</Project>
       <Name>StockInquiry.Tests.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Stock\Find.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Site\_Layout.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
