--- a/StockInquiry.Tests/StockInquiry.Tests.csproj
+++ b/StockInquiry.Tests/StockInquiry.Tests.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Functional\StockInquiryTests.cs" />
     <Compile Include="Functional\StockInquiryTestContext.cs" />
     <Compile Include="Functional\PageModels\StockInquiryPage.cs" />
-    <Compile Include="Unit\RepositoryTest.cs" />
+    <Compile Include="Unit\DependencyInjection\UnityConfigurationTests.cs" />
     <Compile Include="Unit\StockControllerTests.cs" />
     <Compile Include="Unit\StyleControllerTest.cs" />
   </ItemGroup>
@@ -70,6 +70,10 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Practices.Unity, Version=2.1.505.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Unity.2.1.505.2\lib\NET35\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="Moq">
       <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
     </Reference>
@@ -77,6 +81,7 @@
       <HintPath>..\packages\NUnit.2.6.2\lib\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Mvc, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
