--- a/StockInquiry/StockInquiry.csproj
+++ b/StockInquiry/StockInquiry.csproj
@@ -41,6 +41,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\packages\Castle.Windsor.3.2.0\lib\net45\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Practices.ServiceLocation">
       <HintPath>..\packages\CommonServiceLocator.1.0\lib\NET35\Microsoft.Practices.ServiceLocation.dll</HintPath>
@@ -80,13 +86,18 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.AspNet.WebPages.2.0.20710.0\lib\net40\System.Web.WebPages.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\StockController.cs" />
     <Compile Include="Controllers\SKUController.cs" />
-    <Compile Include="DependencyInjection\UnityConfiguration.cs" />
-    <Compile Include="DependencyInjection\UnityControllerFactory.cs" />
+    <Compile Include="DependencyInjection\IConfiguredContainer.cs" />
+    <Compile Include="DependencyInjection\Windsor\ControllerRegistration.cs" />
+    <Compile Include="DependencyInjection\Windsor\WindsorConfiguredContainer.cs" />
+    <Compile Include="DependencyInjection\ConfiguredControllerFactory.cs" />
+    <Compile Include="DependencyInjection\Windsor\RepositoryConfiguration.cs" />
+    <Compile Include="DependencyInjection\Windsor\SimulatorsConfiguration.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -124,6 +135,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="DependencyInjection\Registration\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
